# nstd

./: CMakeLists.txt  address.cpp  address.h  chars cache.h  checksum.cpp  checksum.h  confirmable_value.h  core.h  enum_tools.h  memory backup.h  memory block.cpp  memory block.h  memory protect.cpp  memory protect.h  one_instance.h  overload.h  runtime assert.cpp  runtime assert.h  signature.h  smooth_value.h  smooth_value_fwd.h  str_crypt.h  timer.cpp  timer.h  type name.h  type_traits.h  unistring.h  xor_shift.h
impl/nstd/: address.cpp  address.h  address.ixx  address_includes.h  address_pipe.h  chars cache.h  checksum.cpp  checksum.h  confirmable_value.h  core.h  core_utils.h  custom_types.h  deque.h  enum_tools.h  format.h  format.ixx  hashed_string.h  hashed_string.ixx  indexed_iterator.ixx  lazy_invoke.ixx  math.h  memory backup.h  memory block.cpp  memory block.h  memory protect.cpp  memory protect.h  nstd.ixx  one_instance.h  one_instance.ixx  overload.h  private_vector.h  ranges.h  runtime assert.cpp  runtime assert.h  runtime_assert.cpp  runtime_assert.h  runtime_assert_core.h  runtime_assert_fwd.h  runtime_assert_impl.h  signature.h  (+15 more)
impl/nstd/container/: wrapper.ixx
impl/nstd/containers/: deque.h  unordered_map.h  unordered_set.h
impl/nstd/file/: to_memory.cpp  to_memory.h
impl/nstd/mem/: address.cpp  address.ixx  address_includes.h  backup.h  backup.ixx  block.cpp  block.h  block.ixx  block_flags.cpp  block_includes.h  mem.ixx  protect.cpp  protect.h  protect.ixx  signature.cpp  signature.ixx  signature_includes.h
impl/nstd/module/: all_infos.cpp  all_infos.h  cache_base.h  cache_impl.h  exports.cpp  exports.h  info.cpp  info.h  sections.cpp  sections.h  vtables.cpp  vtables.h
impl/nstd/os/: handle.cpp  handle.h  module info.cpp  module info.h  threads.cpp  threads.h
impl/nstd/os/module info/: cache_base.h  cache_impl.h  exports mgr.cpp  exports mgr.h  root class.h  sections mgr.cpp  sections mgr.h  vtables mgr.cpp  vtables mgr.h
impl/nstd/rtlib/: all_infos.cpp  all_infos.ixx  basic_info.cpp  basic_info.ixx  basic_info_includes.h  cache.ixx  cache_includes.h  exports.cpp  exports.ixx  includes.h  info.cpp  info.ixx  info_impl.cpp  info_impl.ixx  info_includes.h  rtlib.ixx  sections.cpp  sections.ixx  vtables.cpp  vtables.ixx
impl/nstd/text/: chars_cache.ixx  convert.cpp  convert.ixx  hashed_string.cpp  hashed_string.ixx  provide_string.h  string.ixx  string_or_view.ixx
impl/nstd/text/convert/: to_lower.cpp  to_lower.ixx  unicode.cpp  unicode.h  unicode.ixx
impl/nstd/winapi/: comptr.h  comptr.ixx  comptr_includes.h  convert_string.h  exports.cpp  exports.ixx  includes.h  modlues.cpp  modlues.ixx  module_info.cpp  module_info.ixx  sections.cpp  sections.ixx  vtables.cpp  vtables.ixx  winapi.ixx
impl/nstd/winapi/internal/: arguments_protect.h  helpers.ixx  msg_invoke.h
os/: handle.cpp  handle.h  module info.cpp  module info.h  threads.cpp  threads.h
os/module info/: data_cache.cpp  data_cache.h  exports mgr.cpp  exports mgr.h  exports_storage.cpp  exports_storage.h  root class.h  sections mgr.cpp  sections mgr.h  sections_storage.cpp  sections_storage.h  vtables mgr.cpp  vtables mgr.h  vtables_storage.cpp  vtables_storage.h
